<resources>
    <string name="app_name">VMax</string>


    <!--Login Activity-->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>

    <!--Main Activity-->
    <string name="title_activity_main">VMax</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="nav_all">All Products</string>
    <string name="nav_add_product">Add New Product</string>
    <string name="nav_edit_product">Edit Product</string>
    <string name="nav_delete_product">Delete Product</string>
    <string name="nav_add_stock">Add Stock</string>
    <string name="nav_edit_stock">Edit Stock</string>
    <string name="nav_delete_stock">Delete Stock</string>
    <string name="nav_logout">Log Out</string>

    <string name="menu_cart">Cart</string>

    <!--Add Product Activity-->
    <string name="product_name">Product Name</string>
    <string name="stock_date">Date of Purchase</string>
    <string name="stock_quantity">Quantity</string>
    <string name="stock_price">Stock Price</string>
    <string name="stock_sale_price">Sale Price</string>
    <string name="stock_add">Add Stock</string>
    <string name="product_add">Add Product</string>

    <string name="tv_product_image">Add Product Image</string>
    <string name="cmenu_camera">Camera</string>
    <string name="cmenu_gallery">Gallery</string>


    <!--Edit Product Activity-->
    <string name="btn_update">Update Product</string>

    <!--Check Out Activity-->
    <string name="btn_check_out">Check Out</string>
    <string name="menu_nominal">Nominal</string>

    <!--InvoiceActivity-->
    <string name="txt_invoice">Invoice</string>

    <!--SalesReportActivity-->
    <string name="txt_from_date">From</string>
    <string name="txt_to_date">To</string>


    <!--All Product Fragment-->
    <string name="fragment_all_product">All Product Fragment</string>
    <string name="all_product">All Products</string>

    <!--Recent Fragment-->
    <string name="fragment_recent">Recent Fragment</string>
    <string name="recent_products">Recent Products</string>

    <!--Delete Adapter-->
    <string name="btn_delete">Delete</string>

    <!--Product List Adapter-->
    <string name="btn_cart">Add to Cart</string>

    <!--Product List Adapter-->
    <string name="pmenu_cart">Add to Cart</string>
    <string name="pmenu_edit">Edit Product</string>
    <string name="pmenu_delete">Delete Product</string>

    <string name="try_again">Try again</string>
    <string name="btn_ok">Ok</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="sp_select">Select Category</string>
    <string name="txt_rs">RS.\u0020%1$d</string>
    <string name="txt_total_rs">Total RS.\u0020%1$d</string>
    <string name="txt_space">\u0020</string>
    <string name="txt_stock">Stock.\u0020%1$d</string>
    <string name="hint_search">Search</string>
    <string name="internal_storage">Internal storage</string>
    <string name="cancel">Cancel</string>
    <string name="txt_delete">Delete</string>

    <string name="dir_product">Product</string>
    <string name="file_no_media">.nomedia</string>


    <!--Check Out Adapter-->
    <string name="txt_price_per">Price per unit</string>

    <!--Stock Adapter-->
    <string name="balance_quantity">Balance Quantity</string>


    <!--Discount Dialog Fragment-->
    <string name="hint_name">Name</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_discount">Discount Amount</string>
    <string name="hint_commission">Commission Amount</string>
    <string name="hint_commission_paid">Commission Paid To</string>
    <array name="purchase_mode">
        <item>Cash</item>
        <item>Credit</item>
    </array>

    <!--Errors-->
    <string name="error_login">"Login Failed username or password is incorrect"</string>
    <string name="error_empty">Field cannot be empty</string>
    <string name="error_email">Invalid email id</string>
    <string name="error_length_pass">Password length must be greater than 6 </string>
    <string name="error_phone">Invalid phone number</string>
    <string name="error_name">Invalid customer name</string>
    <string name="error_all">You must fill all the fields</string>
    <string name="error_try_again">Please try again</string>
    <string name="error_no_result">No results found</string>
    <string name="error_comment">Invalid comment</string>
    <string name="error_category">Please select a category</string>
    <string name="error_invalid_file">This type of file cannot be supported</string>
    <string name="error_pic">Select a valid image from gallery</string>
    <string name="error_image">Invalid Image</string>
    <string name="error_field">Invalid Field</string>
    <string name="error_date">Invalid Date</string>
    <string name="error_item">Invalid quantity</string>

    <string name="error_network">Please check your internet connection</string>
    <string name="error_connection">No connection</string>
    <string name="error_network_msg">Oops! Something went wrong.</string>

    <string name="download_completed">Download Completed. Check your app folder</string>
    <string name="download_failed">Download Failed. Please try again</string>

    <!--Success Messages-->
    <string name="add_product_success">Product Added Successfully</string>
    <string name="delete_product_success">Product Deleted Successfully</string>
    <string name="update_product_success">Product Updated Successfully</string>

    <string name="add_stock_success">Stock Added Successfully</string>
    <string name="delete_stock_success">Stock Deleted Successfully</string>
    <string name="update_stock_success">Stock Updated Successfully</string>
    <string name="error_stock">Stock exceeded</string>


</resources>
