<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_all_products"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_all" />
        <item
            android:id="@+id/nav_add_product"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_add_product" />

        <!--<item-->
            <!--android:id="@+id/nav_edit_product"-->
            <!--android:icon="@drawable/ic_menu_gallery"-->
            <!--android:title="@string/nav_edit_product" />-->

        <item
            android:id="@+id/nav_delete_product"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_delete_product" />

    </group>

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_add_stock"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_add_stock" />

        <item
            android:id="@+id/nav_edit_stock"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_edit_stock" />

        <item
            android:id="@+id/nav_delete_stock"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_delete_stock" />
    </group>

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_menu_manage"
        android:title="@string/nav_logout" />

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="Share" />-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="Send" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>
