<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp">

    <RelativeLayout
        android:id="@+id/layout_background"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/colorPrimary">

        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/delete_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:padding="10dp"
            android:background="@android:color/transparent"
            card_view:srcCompat="@drawable/ic_delete" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@id/delete_icon"
            android:text="@string/txt_delete"
            android:textColor="@color/colorWhite"
            android:textSize="13sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_foreground"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/colorWhite"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/iv_product"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:scaleType="fitXY" />

        <TextView
            android:id="@+id/tv_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/iv_product"
            android:ellipsize="end"
            android:lines="1"
            android:text=""
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <com.jijith.numberbutton.NumberButton
            android:id="@+id/nb_quantity"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:layout_alignBottom="@+id/iv_product"
            android:layout_alignStart="@+id/tv_product_name"
            card_view:backGroundColor="@color/colorPrimary"
            card_view:finalNumber="100" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/tv_product_name"
            android:layout_centerVertical="true"
            android:text="@string/stock_quantity"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/nb_quantity"
            android:layout_toStartOf="@id/edt_price"
            android:gravity="center"
            android:text="@string/txt_price_per"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/edt_price"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignEnd="@+id/tv_product_name"
            android:layout_centerVertical="true"
            android:background="@drawable/bg_product_image"
            android:focusable="auto"
            android:inputType="number"
            android:maxLength="10"
            android:minWidth="60dp"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            android:text=""
            android:textColor="@color/colorBlack"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/iv_product"
            android:layout_alignEnd="@+id/tv_product_name"
            android:lines="1"
            android:text=""
            android:textAlignment="textEnd"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

    </RelativeLayout>

</RelativeLayout>